source/tests/errors/cannot_set_property.apex
x = 42
x.field = 100